Fix endscreen elements misalignments

--- a/css/style.css
+++ b/css/style.css
@@ -20,45 +20,10 @@
   user-select: none; /* Standard */
 }
 
-.text span {
-  opacity: 0;
-}
-
-.text span.revealed {
-  opacity: 1;
-}
-
-.text span.green {
-  color: #27ae60;
-}
-
-.text span.red {
-  color: #ffffff;
-  font-size: 200px;
-  white-space: pre;
-}
-
-.text span.gold {
-  color: #eeea09;
-  font-size: 150px;
-}
-
 /* Demo styles */
 body {
   background: #3498db;
   font-family: 'Silkscreen', sans-serif;
-}
-
-.text {
-  text-align: center;
-  font-size: 40px;
-  word-spacing: 0.2em;
-  margin: 50px;
-  margin-left: 300px;
-  position:absolute;
-  line-height: 1.2em;
-  top: 50px;
-  color: #ffffff;
 }
 
 /*-----------------------------------------------DESKTOP-----------------------------------------------------*/ 
@@ -536,51 +501,103 @@ body {
   background: black;
   font-family: 'Silkscreen', sans-serif;
   margin: 0;
+  overflow: hidden;
 }
 
 /*-------------------------------MAIN-GAME-----------------------------------*/ 
-  
+
+.centred {
+  margin: auto;
+  resize: horizontal;
+  max-width: 83%;
+  aspect-ratio: 1.55556;
+}
+
+#game-wrapper {
+  margin-bottom: 0px;
+}
+
 #canvas1 {
-  z-index: 0;
+  width: 83%;
+  position: absolute;
 }
 
 #countdown {
   position: absolute;
-  top: 15px;
-  left: 1805px;
-  height: 50px;
-  width: 100px; 
+  top: 5%;
+  left: 83%;
+  height: 5%;
+  width: 5%; 
   background-color: #fff;
   display: none;
   align-items: center;
   justify-content: center;
-  font-size: 50px;
+  font-size: 3vw;
   margin: 0;
 }
 
 #introText {
   position: absolute;
-  top: 215px;
-  left: 0px;
-  width: 1920px;
+  top: 15%;
+  left: 15%;
+  width: 70%;
   display: inline-flex;
-  font-size: 70px;
+  font-size: 5vh;
   color: #fff;
-  text-align: center;
   justify-content: center;
-  margin-top: 0px;
 }
 
 #introCountdown {
   position: absolute;
-  top: 0px;
-  left: 0px;
-  width: 1920px;
+  top: 0%;
+  left: 45%;
   display: none;
-  font-size: 400px;
+  font-size: 20vw;
   color: #fff;
   text-align: center;
   justify-content: center;
+}
+
+#endgame-text {
+  width: 77%;
+}
+
+.text {
+  position: absolute;
+  width: 83%;
+  height: 83%;
+  font-size: 40px;
+  word-spacing: 0.2em;
+  margin-top: 80px;
+  margin-left: 50px;
+  left: 7.5%;
+  line-height: 0.6em;
+  text-align: center;
+  top: 50px;
+  color: #ffffff;
+}
+
+.text span {
+  opacity: 0;
+}
+
+.text span.revealed {
+  opacity: 1;
+}
+
+.text span.green {
+  color: #27ae60;
+}
+
+.text span.red {
+  color: #ffffff;
+  font-size: 200px;
+  white-space: pre;
+}
+
+.text span.gold {
+  color: #eeea09;
+  font-size: 150px;
 }
 
 #playerImage, #floppyDiskImage, #enemyImage, #smallPlatformImage, 
@@ -597,11 +614,11 @@ body {
   display: none; /* Hidden by default */
   position: fixed; /* Stay in place */
   z-index: 1; /* Sit on top */
-  left: 0;
+  left: 7.5px;
   top: 0;
   width: 100%; /* Full width */
   height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
+  overflow: hidden; /* Enable scroll if needed */
   background-color: rgb(0,0,0); /* Fallback color */
   background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
 }
@@ -618,7 +635,7 @@ body {
 
 /* The Close Button */
 .close {
-  color: #aaa;
+  color: #777;
   float: right;
   font-size: 28px;
   font-weight: bold;
@@ -632,24 +649,113 @@ body {
 
 #myBtn {   
   position: relative;
-  top:  -748px;
+  top: -748px;
   left: 700px;
   opacity: 1;
   visibility: hidden;
 }
 
-#diskBehavioralImageE, #diskBiologyImageE, #diskChadImageE, #diskChemistryImageE, 
-#diskEksocImageE, #diskGeographyImageE, #diskInternationalImageE, #diskLawImageE, #diskMathsImageE,
-#diskManagementImageE, #diskPhilologyImageE, #diskPhilosophyImageE, #diskTomaszowImageE {   
-  margin: 20px;
-}
-
 #endDisks {
-  visibility: hidden;
   position: relative;
-  top:  -748px;
-  left: 150px;;
+  /* border: #27ae60 1px solid; */
+  box-sizing: border-box;
+  visibility: hidden;
+  top: -740px;
+  left: inherit;
   opacity: 1;
+  width: 77%;
   align-items: center;
   cursor: pointer;
+}
+
+/* Either delete or add the properties to every disk with different positioning */
+#diskBehavioralImageE {
+  margin: 0px;
+  position: absolute;
+  left: 10%;
+  top: 89%;
+}
+
+#diskBiologyImageE {
+  margin: 0px;
+  position: absolute;
+  left: 19.375%;
+  top: 89%;
+}
+
+#diskChadImageE {
+  margin: 0px;
+  position: absolute;
+  left: 28.75%;
+  top: 89%;
+}
+
+#diskChemistryImageE {
+  margin: 0px;
+  position: absolute;
+  left: 38.125%;
+  top: 89%;
+}
+
+#diskEksocImageE {
+  margin: 0px;
+  position: absolute;
+  left: 47.5%;
+  top: 89%;
+}
+
+#diskGeographyImageE {
+  margin: 0px;
+  position: absolute;
+  left: 56.875%;
+  top: 89%;
+}
+
+#diskInternationalImageE {
+  margin: 0px;
+  position: absolute;
+  left: 66.25%;
+  top: 89%;
+}
+
+#diskLawImageE {
+  margin: 0px;
+  position: absolute;
+  left: 75.625%;
+  top: 89%;
+}
+
+#diskMathsImageE {
+  margin: 0px;
+  position: absolute;
+  left: 85%;
+  top: 89%;
+}
+
+#diskManagementImageE {
+  margin: 0px;
+  position: absolute;
+  left: 33.125%;
+  top: 101.5%;
+}
+
+#diskPhilologyImageE {
+  margin: 0px;
+  position: absolute;
+  left: 43.125%;
+  top: 101.5%;
+}
+
+#diskPhilosophyImageE {
+  margin: 0px;
+  position: absolute;
+  left: 53.125%;
+  top: 101.5%;
+}
+
+#diskTomaszowImageE {   
+  margin: 0px;
+  position: absolute;
+  left: 63.125%;
+  top: 101.5%;
 }
